k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: social-media
  labels:
    name: social-media
    environment: production
